--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.description {
+  padding: 20px 0;
+}
+
+.ui.container {
+  padding-bottom: 50px;
+}
+
+.actions {
+  padding-top: 10px;
+}
